generator client {
  provider = "prisma-client-js"
  output   = "../lib/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

// ── Multi-Tenant ──────────────────────────────────────────

enum TenantStatus {
  ACTIVE
  INACTIVE
  SUSPENDED
  REMOVED
}

model Tenant {
  id         String       @id @default(cuid())
  name       String
  subdomain String       @unique
  status     TenantStatus @default(ACTIVE)
  config     Json?
  deletedAt  DateTime?
  createdAt  DateTime     @default(now())
  updatedAt  DateTime     @updatedAt

  users        User[]
  tags         Tag[]
  projects     Project[]
  departments  Department[]
  roles        Role[]
  auditLogs    AuditLog[]

  stakeholders Stakeholder[]
}

// ── Projects ──────────────────────────────────────────────

enum ProjectStatus {
  ACTIVE
  INACTIVE
  COMPLETED
  ARCHIVED
}

model Project {
  id          String        @id @default(cuid())
  tenantId    String
  tenant      Tenant        @relation(fields: [tenantId], references: [id])
  name        String
  description String?

  logoUrl     String?
  slogan      String?
  location    String?
  startDate   DateTime?
  endDate     DateTime?

  justificativa      String?  @db.Text
  objetivos          String?  @db.Text
  metodologia        String?  @db.Text
  descricaoProduto   String?  @db.Text
  premissas          String?  @db.Text
  restricoes         String?  @db.Text
  limitesAutoridade  String?  @db.Text

  semestre           String?
  ano                Int?

  status      ProjectStatus @default(ACTIVE)
  deletedAt   DateTime?
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  sprints         Sprint[]
  members         UserProject[]
  usuariosRole    UserProjectRole[]
  macroFases      ProjectMacroFase[]

  stakeholders    ProjectStakeholder[]

  @@unique([name, tenantId])
}

model ProjectMacroFase {
  id          String   @id @default(cuid())
  projectId   String
  project     Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  fase        String
  dataLimite  String?
  custo       String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

// ── Departments ───────────────────────────────────────────

model Department {
  id          String    @id @default(cuid())
  tenantId    String
  tenant      Tenant    @relation(fields: [tenantId], references: [id])
  name        String
  description String?
  active      Boolean   @default(true)
  hourlyRate  Float?
  deletedAt   DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  users        UserDepartment[]
  userProjects UserProject[]

  @@unique([name, tenantId])
}

model UserDepartment {
  id           String     @id @default(cuid())
  userId       String
  departmentId String
  user         User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  department   Department @relation(fields: [departmentId], references: [id], onDelete: Cascade)

  @@unique([userId, departmentId])
}

model UserProject {
  id           String      @id @default(cuid())
  userId       String
  projectId    String
  active       Boolean     @default(true)
  role         String?
  departmentId String?
  hourlyRate   Float?
  startDate    DateTime    @default(now())
  endDate      DateTime?
  user         User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  project      Project     @relation(fields: [projectId], references: [id], onDelete: Cascade)
  department   Department? @relation(fields: [departmentId], references: [id], onDelete: SetNull)

  @@unique([userId, projectId])
}

// ── RBAC ───────────────────────────────────────────────────

enum RoleScope {
  TENANT
  PROJETO
}

model Role {
  id          String      @id @default(cuid())
  tenantId    String
  tenant      Tenant      @relation(fields: [tenantId], references: [id])
  name        String      @map("nome")
  nameKey     String      @map("nomeKey")
  scope       RoleScope   @map("escopo")
  description String?     @map("descricao")
  deletedAt   DateTime?
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt

  permissions         RolePermission[]
  userProjectRoles    UserProjectRole[]

  @@unique([nameKey, tenantId, scope])
}

model Permission {
  id          String    @id @default(cuid())
  name        String    @unique
  description String?
  resource    String
  action      String
  deletedAt   DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  roles RolePermission[]

  @@unique([resource, action])
}

model RolePermission {
  id           String     @id @default(cuid())
  roleId       String
  permissionId String
  role         Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permission   Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@unique([roleId, permissionId])
}

model UserProjectRole {
  id        String   @id @default(cuid())
  userId    String
  projectId String   @map("projetoId")
  roleId    String
  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  role      Role     @relation(fields: [roleId], references: [id], onDelete: Cascade)
  deletedAt DateTime?
  createdAt DateTime @default(now()) @map("criadoEm")
  updatedAt DateTime @updatedAt

  @@unique([userId, projectId])
}

// ── Users ─────────────────────────────────────────────────

model User {
  id            String    @id @default(cuid())
  tenantId      String
  tenant        Tenant    @relation(fields: [tenantId], references: [id])
  name          String
  email         String
  passwordHash  String
  role          String    @default("member")
  avatarUrl     String?
  cargo         String?
  departamento  String?
  hourlyRate    Float     @default(0)
  isActive      Boolean   @default(true)
  status        String    @default("active")
  mfaEnabled          Boolean   @default(false)
  mfaSecret           String?
  loginAttempts       Int       @default(0)
  forcePasswordChange Boolean   @default(false)
  lastLogin     DateTime?
  tokenVersion  Int       @default(0)
  resetToken       String?
  resetTokenExpiry DateTime?
  deletedAt     DateTime?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  phone        String?
  cep          String?
  logradouro   String?
  numero       String?
  complemento  String?
  bairro       String?
  cidade       String?
  estado       String?
  notes        String? @db.Text

  tags              Tag[]
  sprints           Sprint[]
  timeEntries       TimeEntry[]
  responsibleCards  CardResponsible[]
  departments       UserDepartment[]
  projects          UserProject[]
  comments          Comment[]
  notifications     Notification[]
  dashboardMetrics  DashboardMetric[]
  sprintFeedbacks   SprintFeedback[]

  @@unique([email, tenantId])
}

enum SprintStatus {
  PLANNED
  ACTIVE
  COMPLETED
}

model Sprint {
  id            String         @id @default(cuid())
  name          String
  description   String?
  status        SprintStatus   @default(PLANNED)
  startDate     DateTime?
  endDate       DateTime?
  qualidade     Float?
  dificuldade   Float?
  projectId     String?
  project       Project?       @relation(fields: [projectId], references: [id])
  createdBy     String?
  creator       User?          @relation(fields: [createdBy], references: [id])
  cards            Card[]
  sprintColumns    SprintColumn[]
  dashboardMetrics DashboardMetric[]
  sprintFeedbacks  SprintFeedback[]
  deletedAt        DateTime?
  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt
}

model SprintColumn {
  id        String    @id @default(cuid())
  title     String
  position  Int
  sprintId  String
  sprint    Sprint    @relation(fields: [sprintId], references: [id], onDelete: Cascade)
  cards     Card[]    @relation("SprintColumnCards")
  deletedAt DateTime?
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
}

model Tag {
  id       String    @id @default(cuid())
  tenantId String
  tenant   Tenant    @relation(fields: [tenantId], references: [id])
  name     String
  color    String    @default("#6b7280")
  userId   String
  user     User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  cards    CardTag[]

  @@unique([name, userId])
}

model CardTag {
  cardId String
  tagId  String
  card   Card   @relation(fields: [cardId], references: [id], onDelete: Cascade)
  tag    Tag    @relation(fields: [tagId], references: [id], onDelete: Cascade)

  @@id([cardId, tagId])
}

model CardResponsible {
  cardId String
  userId String
  card   Card   @relation(fields: [cardId], references: [id], onDelete: Cascade)
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([cardId, userId])
}

model Card {
  id             String        @id @default(cuid())
  title          String
  description    String        @default("")
  color          String        @default("#6b7280")
  position       Int           @default(0)
  sprintId       String
  sprint         Sprint        @relation(fields: [sprintId], references: [id], onDelete: Cascade)
  sprintColumnId String?
  sprintColumn   SprintColumn? @relation("SprintColumnCards", fields: [sprintColumnId], references: [id], onDelete: SetNull)
  sprintPosition Int?
  priority       String        @default("media")
  tagsImport     String        @default("")
  startDate      DateTime?
  endDate        DateTime?
  deletedAt      DateTime?
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @updatedAt

  tags         CardTag[]
  attachments  Attachment[]
  timeEntries  TimeEntry[]
  responsibles CardResponsible[]
  comments     Comment[]
}

// ── Comment ───────────────────────────────────────────────

enum CommentType {
  COMMENT
  FEEDBACK
}

model Comment {
  id        String      @id @default(cuid())
  cardId    String
  card      Card        @relation(fields: [cardId], references: [id], onDelete: Cascade)
  userId    String
  user      User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  content   String
  type      CommentType @default(COMMENT)
  reactions Json?
  deletedAt DateTime?
  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt
}

// ── Notification ──────────────────────────────────────────

enum NotificationType {
  COMMENT
  ASSIGNMENT
  UPDATE
  COMPLETION
  MENTIONED
  INVITATION
}

enum NotificationStatus {
  UNREAD
  READ
  ARCHIVED
}

model Notification {
  id             String             @id @default(cuid())
  userId         String
  user           User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  type           NotificationType
  title          String
  message        String
  reference      String?
  referenceType  String?
  status         NotificationStatus @default(UNREAD)
  deletedAt      DateTime?
  createdAt      DateTime           @default(now())
  readAt         DateTime?
  updatedAt      DateTime           @updatedAt
}

model Attachment {
  id         String    @id @default(cuid())
  cardId     String
  card       Card      @relation(fields: [cardId], references: [id], onDelete: Cascade)
  fileName   String
  fileType   String
  filePath   String
  fileSize   Int
  isCover    Boolean   @default(false)
  deletedAt  DateTime?
  uploadedAt DateTime  @default(now())
}

model TimeEntry {
  id          String    @id @default(cuid())
  userId      String
  cardId      String
  startedAt   DateTime  @default(now())
  endedAt     DateTime?
  duration    Int       @default(0)
  description String?
  isRunning   Boolean   @default(false)
  isManual    Boolean   @default(false)
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  card        Card      @relation(fields: [cardId], references: [id], onDelete: Cascade)
  deletedAt   DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
}

// ── AuditLog ──────────────────────────────────────────────

model AuditLog {
  id         String   @id @default(cuid())
  tenantId   String
  tenant     Tenant   @relation(fields: [tenantId], references: [id])
  userId     String?
  action     String
  entity     String
  entityId   String?
  details    Json?
  timestamp  DateTime @default(now())
}

// ── DashboardMetric ───────────────────────────────────────

model DashboardMetric {
  id               String   @id @default(cuid())
  sprintId         String
  sprint           Sprint   @relation(fields: [sprintId], references: [id], onDelete: Cascade)
  userId           String
  user             User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  horas            Float    @default(0)
  tarefasPendentes Int      @default(0)
  custoTotal       Float    @default(0)
  rankingPosicao   Int      @default(0)
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  @@unique([sprintId, userId])
}

// ── SprintFeedback ────────────────────────────────────────

model SprintFeedback {
  id                String   @id @default(cuid())
  sprintId          String
  sprint            Sprint   @relation(fields: [sprintId], references: [id], onDelete: Cascade)
  userId            String
  user              User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  tarefasRealizadas String?
  dificuldades      String?
  qualidade         Int
  dificuldade       Int
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt

  @@unique([sprintId, userId])
}

model Stakeholder {
  id          String   @id @default(cuid())
  tenantId    String
  name        String   // Nome
  logoUrl     String?  // Logo do Stakeholder
  company     String?  // Empresa
  competence  String?  // Competência
  email       String?  // e-mail
  phone        String?  // Telefone/Fax
  cep          String?
  logradouro   String?
  numero       String?
  complemento  String?
  bairro       String?
  cidade       String?
  estado       String?
  notes        String?  @db.Text // Observações
  isActive    Boolean  @default(true)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  projects    ProjectStakeholder[]
  
  tenant      Tenant   @relation(fields: [tenantId], references: [id])
}

// Tabela de Vínculo (Projeto <-> Stakeholder)
model ProjectStakeholder {
  id            String   @id @default(cuid())
  projectId     String
  stakeholderId String
  createdAt     DateTime @default(now())

  project       Project     @relation(fields: [projectId], references: [id], onDelete: Cascade)
  stakeholder   Stakeholder @relation(fields: [stakeholderId], references: [id], onDelete: Cascade)

  @@unique([projectId, stakeholderId])
}